# AI

a_share_mainboard/: .env.example  .gitignore  README.md  pyproject.toml
a_share_mainboard/app/: _bootstrap.py  daily_workflow.py  desktop_app.py  launcher.py  rebuild_workflow.py  validate_rolling_workflow.py  validate_workflow.py
a_share_mainboard/config/: ai.toml  app.toml  data.toml  feishu.toml  policy.toml  strategy.toml  universe.toml  validation.toml
a_share_mainboard/docs/: desktop_runtime_packaging.md
a_share_mainboard/scripts/: build_desktop.ps1  export_report.py  init_workspace.py  run_daily.py  run_desktop.py  run_rebuild.py  run_validate.py  run_validate_rolling.py
a_share_mainboard/src/adapters/feishu/: webhook_client.py
a_share_mainboard/src/adapters/llm/: base.py  openai_client.py
a_share_mainboard/src/adapters/market/: akshare_provider.py  base.py  tushare_provider.py
a_share_mainboard/src/ai/agents/: market_summary_agent.py  report_writer_agent.py  risk_reviewer_agent.py  stock_explainer_agent.py
a_share_mainboard/src/ai/guards/: fallback_guard.py  json_guard.py  (+1 more)
a_share_mainboard/src/domain/: enums.py  models.py  schemas.py  types.py
a_share_mainboard/src/infra/: exceptions.py
a_share_mainboard/tests/unit/: test_baseline_ranker.py  test_daily_workflow_top_signals.py  test_env_loader.py  test_policy_overlay_service.py  test_report_templates.py  test_run_lock.py  test_run_logger.py  test_selection_service.py  test_settings_loader.py  test_stock_pool_builder.py  test_validate_rolling_workflow.py  test_validation_engine.py
(+65 files in other folders)
