[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a-share-mainboard"
version = "0.1.0"
description = "A-share mainboard short-horizon research system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "akshare>=1.16.0",
  "duckdb>=1.1.0",
  "httpx>=0.27.0",
  "lightgbm>=4.5.0",
  "numpy>=2.1.0",
  "pandas>=2.2.0",
  "pyarrow>=17.0.0",
  "pydantic>=2.9.0",
  "python-dotenv>=1.0.1",
  "scikit-learn>=1.5.0",
  "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

